--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body{
     border-left-style: solid;
     border-right-style: solid;
     border-bottom:60px solid rgb(36, 205, 196);
+    margin: 0px;
 }
 
 h1{
@@ -35,7 +36,9 @@ input{
 }
 
 p{
-
+    padding-top: 5%;
+    padding-left: 20%;
+    padding-right: 20%;
     font-family: cursive;
     font-weight: bolder;
 
@@ -50,13 +53,16 @@ p{
 }
 
 #firstname{
+    margin-bottom: 10px;
     font-size: 20px;
 }
 
 #lastname{
+    margin-bottom: 20px;
     font-size: 20px;
 }
 
 #email{
+    margin-bottom: 20px;
     font-size: 20px;
 }
